crates/swc/tests/tsc-references/interfaces/interfacesExtendingClasses/interfaceExtendingClassWithPrivates2/input.ts/es2015.1.normal/output.js
class Foo {
}
class Bar {
}
class Baz {
}
var i;
var r = i.z;
var r2 = i.x; // error
var r3 = i.y; // error
